# pytexas-meetup25-diagrams-and-you

./: README.md  mkdocs.yml  pyproject.toml
.github/workflows/: main.yaml  manual.yaml
docs/: 01_graphs.md  02_state.md  03_flowcharts.md  04_workflow.md  05_data_flow.md  06_class.md  06_sequence_diagram.md  07_sequence_diagram.md  08_truth_table.md  09_storyboards_mockups.md  10_tools.md  index.md
src/pydot/: workflow.py
src/pytm/: dfd.py
