[project]
name = "pytexas-meetup25-diagrams-and-you"
version = "0.1.0"
description = "Presentation content for Diagrams and You"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.5.49",
    "mkdocs-mermaid2-plugin>=1.2.1",
    "pydot>=3.0.3",
    "pytm>=1.3.1",
]
